--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -9,38 +9,36 @@
     <div class="row">
 	    <div class="col-sm-6">
     		<p>
-            I am interested in all things machine learning. I developed unsupervised learning 
-            tools for understanding education customers at Microsoft. Previously, I built nlp 
-            tools for text translation/classification at Locus Analytics. Currently pursuing 
-            MS Data Science at U Washington. Actively pursuing full time employment in 
-            NYC or Seattle.
+            I develop machine learning tools and solve business problems. 
+            I have 3 years of applied experience building natural language processing tools
+            and I am near completing a Master's Degree in Data Science focusing on Machine 
+            Learning at the University of Washington. I have worked in a startup, an academic 
+            research group, and a large technology company. I enjoy taking on new challenges
+            and focusing projects on delivering value. I am currently looking for full time 
+            machine learning roles in Seattle, NYC, or SF. 
         </p>
         <p>
-           I love building things.
-           While hard engineering problems are often intrinsically fun to tackle,
-           I'm most attracted to solving real customer problems with a business justification.
-           I'm looking for a senior individual contributor role where I can take on on collaborative
-           team leadership responsibilites, and gain experience with
-           architecture and project management.
         </p>
       </div>
 	    <div class="col-sm-6">
 		    <h3 style="margin-top:0;">Highlights</h3>
 		    <ul>
     			<li>
-            Migrated a monolithic Heroku Ruby on Rails API to multiple Scala
-            services hosted on AWS. Delivered ahead of schedule, projected to save $18k/quarter.
+            Developed statistical tools for understanding education customers at Microsoft 
+            based on their usage of products. Exceeded managers expectations by completing 
+            all stated goals within 12 week period.
     			</li>
           <li>
-            Presented research and proof-of-concept to convince team to move from Hadoop MR to Spark; reduced nodes by 60% and ran 5-8x faster.
+            Benchmarked PyTorch DataParallel and TensorFlow Distributed MirroredStrategy with
+            varying number of GPUs.
+          </li>
           <li>
-            Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
-    			<li>
-            Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
-    			</li>
-    			<li>
-            Awarded patent for novel approach to item normalization in 3rd party catalog data feeds.
-    			</li>
+            Built tool that translates math word problems to mathematical formula that solves 
+            the problem, trained on MathQA dataset.
+          </li>
+          <li>
+            Built text translation/classification tools for industry risk analysis at Locus Analytics.
+          </li>
 		    </ul>
 	    </div>
     </div>
