--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -13,37 +13,34 @@
         </p>
 			<ul>
 			  <li>
-				 <b>Deep learning</b>. It's an exciting time for machine learning. I'm working through several online classes, and swap articles with collegues.
+				 <b>Deep learning</b>. After taking Ali Farhadi's CSE 599, I have been reading even more papers.
 			  </li>
 			  <li>
-				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
-          devices. I like to modify existing kits to improve speed, and add instrumentation.
+				  <b>Federated learning</b>. I think the future of machine learning will be founded on privacy and will allow for more data sharing across users and organizations.
 			  </li>
 			  <li>
-				  <b>Mountaineering</b>. I live in the Pacific Northwest, home of some of the greatest mountains and trails in the country. I enjoy spending weekends
-          on scrambles and getting lost in the woods.
-      </li>
+				  <b>Running</b>. My one exercise! Seattle is perfect for running most times of the year.
+      			</li>
 			</ul>
 		</div>
     <div class="col-sm-6">
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
-          OpenGidget is an open-source fork of Raspbian Linux that makes it easier to auto-provision a headless Raspberry PI,
-          get it onto your WiFi network, and deploy simple Python and Ruby scripts that run at startup - all without needing to plug in a keyboard/monitor.
+			I'm working with Brendan McMahan's group at Google Research on semi-supervised federated learning.
     		</li>
   			<li>
-          My Medium blog covers my ongoing attempts to instrument and automate everything in my house.
-  			</li>
+				I'm working on a Q&A chatbot. I'm not sure what I want it to do yet.
+			</li>
   		    </ul>
   		    <h3>Other Things</h3>
   		    <ul>
   			<li>
-           Volunteer at Boys and Girls club (since 2008)
-  			</li>
-  			<li>
-  			  Active member of The Seattle Ruby on Rails Developers Meetup Group.
-  			</li>
+  			  Active member of Seattle Soto Zen.
+			</li>
+			<li>
+			Active member of Seattle FrontRunners LGBT running group.
+			</li>
 		   </ul>
       </div>
     </div>
