--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -13,11 +13,12 @@
             I have 3 years of applied experience building natural language processing tools
             and I am near completing a Master's Degree in Data Science focusing on Machine 
             Learning at the University of Washington. I have worked in a startup, an academic 
-            research group, and a large technology company. I enjoy taking on new challenges
-            and focusing projects on delivering value. I am currently looking for full time 
-            machine learning roles in Seattle, NYC, or SF. 
+            research group, and a large technology company.
         </p>
         <p>
+          I enjoy taking on new challenges
+            and focusing projects on delivering value. I am currently looking for full time 
+            machine learning roles in Seattle, NYC, or SF. 
         </p>
       </div>
 	    <div class="col-sm-6">
