--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -19,7 +19,7 @@
 				  <b>Federated learning</b>. I think the future of machine learning will be founded on privacy and will allow for more data sharing across users and organizations.
 			  </li>
 			  <li>
-				  <b>Running</b>. My one exercise! Seattle is perfect for running most times of the year.
+				  <b>Running</b>. My main form of exercise! Seattle is perfect for running most times of the year.
       			</li>
 			</ul>
 		</div>
@@ -27,7 +27,7 @@
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
-			I'm working with Brendan McMahan's group at Google Research on semi-supervised federated learning.
+			I'm working with Brendan McMahan's group at Google Research investigating semi-supervised federated learning.
     		</li>
   			<li>
 				I'm working on a Q&A chatbot. I'm not sure what I want it to do yet.
@@ -45,4 +45,5 @@
       </div>
     </div>
   </div>
+
 </section>
